#39 correct alignment

--- a/assets/sass/single-product.scss
+++ b/assets/sass/single-product.scss
@@ -110,6 +110,11 @@ body.woocommerce {
     	transition: all 200ms ease-in-out;
 
 	}
+	.buttons-qty input{
+		margin-left: 20px;
+		margin-right: 20px;
+		text-align: center;
+	}
 	.entry-title {
 		color:#969494 !important;
 		text-transform: uppercase;
